--- a/app/index.html
+++ b/app/index.html
@@ -47,9 +47,11 @@
         <script src="scripts/models/game.js"></script>
         <script src="scripts/models/stage.js"></script>
         <script src="scripts/models/timer.js"></script>
+        <script src="scripts/models/input.js"></script>
         <script src="scripts/models/shape.js"></script>
         <script src="scripts/models/instances.js"></script>
         <script src="scripts/models/ball.js"></script>
+        <script src="scripts/models/catch.js"></script>
         <script src="scripts/models/text.js"></script>
         <!-- endbuild -->
 </body>
