--- a/app/index.html
+++ b/app/index.html
@@ -51,6 +51,7 @@
         <script src="scripts/models/shape.js"></script>
         <script src="scripts/models/instances.js"></script>
         <script src="scripts/models/ball.js"></script>
+        <script src="scripts/models/line.js"></script>
         <script src="scripts/models/catch.js"></script>
         <script src="scripts/models/text.js"></script>
         <!-- endbuild -->
