updating tests wip

--- a/app/index.html
+++ b/app/index.html
@@ -45,6 +45,8 @@
         <script src="scripts/main.js"></script>
         <script src="scripts/templates.js"></script>
         <script src="scripts/models/game.js"></script>
+        <script src="scripts/models/level.js"></script>
+        <script src="scripts/models/levelSelect.js"></script>
         <script src="scripts/models/stage.js"></script>
         <script src="scripts/models/timer.js"></script>
         <script src="scripts/models/input.js"></script>
