more tests and collections

--- a/app/index.html
+++ b/app/index.html
@@ -46,13 +46,13 @@
         <script src="scripts/templates.js"></script>
         <script src="scripts/models/game.js"></script>
         <script src="scripts/models/level.js"></script>
-        <script src="scripts/models/levelSelect.js"></script>
-        <script src="scripts/models/stage.js"></script>
+        <script src="scripts/collections/levelSelect.js"></script>
         <script src="scripts/models/timer.js"></script>
         <script src="scripts/models/input.js"></script>
-        <script src="scripts/models/shape.js"></script>
-        <script src="scripts/models/instances.js"></script>
         <script src="scripts/models/ball.js"></script>
+        <script src="scripts/collections/balls.js"></script>
+        <script src="scripts/config/config.js"></script>
+        <script src="scripts/models/stage.js"></script>
         <script src="scripts/models/line.js"></script>
         <script src="scripts/models/catch.js"></script>
         <script src="scripts/models/text.js"></script>
